<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Othello</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="how_many_players">How many players are playing?</string>
    <string name="one_player_game">1</string>
    <string name="two_player_game">2</string>
    <string name="title_activity_othello">OthelloActivity</string>
    <string name="x">X</string>
    <string name="o">O</string>
    <string name="blank"></string>
    <string name="illegal_move">Sorry, that move is illegal</string>
    <string name="winner">Game over, winner is\ </string>
    <string name="welcome">Welcome\ </string>
    <string name="tie">The game ended in a tie</string>
    <string name="stuck">\ couldn\'t play; their turn was skipped</string>
    <string name="instruction_message">Turn:\ </string>
    <string name="name_player1">Black</string>
    <string name="name_player2">White</string>
    <string name="starting_score">2</string>
    <string name="hint">player name</string>
    <string name="play_button">Play</string>
    
    

</resources>
